create onDrag events & useRef

--- a/src/components/drop-file-input/drop-file-input.css
+++ b/src/components/drop-file-input/drop-file-input.css
@@ -22,7 +22,8 @@
     cursor: pointer;
 }
 
-.drop-file-input:hover, .drop-file-input.dragover {
+/* .drop-file-input:hover,  */
+.drop-file-input.dragover {
     opacity: 0.6;
 }
 
